--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Toilet Pal",
   "main": "server.js",
   "scripts": {
-    "test": "jasmine",
+    "test": "eslint . & jasmine",
     "dev": "webpack & node server",
     "start": "node server",
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,9 @@
     "babel": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "body-parser": "^1.17.0",
+    "eslint": "^4.18.0",
     "express": "^4.16.2",
+    "lint": "^1.1.2",
     "node": "^9.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
