--- a/package.json
+++ b/package.json
@@ -13,14 +13,23 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "body-parser": "~1.15.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
-    "jade": "~1.11.0",
+    "express-restify-mongoose": "^4.1.3",
+    "express-session": "^1.15.1",
+    "moment": "^2.17.1",
+    "mongoose": "^4.8.3",
+    "mongoose-timestamp": "^0.6.0",
     "morgan": "~1.7.0",
-    "pug": "^2.0.0-rc.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-refetch": "^1.0.0",
+    "react-search-input": "^0.10.4",
     "serve-favicon": "~2.3.0",
     "webpack": "^2.2.1"
   }
