progresion, errors in user updates remain

--- a/package.json
+++ b/package.json
@@ -1,33 +1,62 @@
 {
-  "name": "nodejs-express-react-todo-list",
+  "name": "task-tracker",
   "version": "0.0.0",
+  "description": "",
   "private": true,
+  "author": "Jovani Warguez",
+  "main": "bin/www",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jovanidash21/task-tracker.git"
+  },
   "scripts": {
-    "postinstall": "webpack -p",
-    "build": "webpack -p",
-    "start": "node ./bin/www"
+    "start": "node bin/www",
+    "build": "run-s webpack:prod node:prod",
+    "dev": "run-p webpack:dev node:dev",
+    "webpack:prod": "webpack -p",
+    "webpack:dev": "webpack --watch",
+    "node:prod": "cross-env NODE_ENV=production node bin/www",
+    "node:dev": "nodemon bin/www --watch build"
   },
   "dependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "body-parser": "~1.15.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
-    "express-session": "^1.15.1",
-    "moment": "^2.17.1",
-    "mongoose": "^4.8.3",
+    "ajv": "^6.2.1",
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.6.8",
+    "dotenv": "^4.0.0",
+    "eslint": "^4.18.2",
+    "express": "^4.15.3",
+    "express-session": "^1.15.5",
+    "is-typedarray": "^1.0.0",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
+    "mongoose": "^4.11.5",
     "mongoose-timestamp": "^0.6.0",
-    "morgan": "~1.7.0",
+    "morgan": "^1.8.2",
+    "npm-run-all": "^4.1.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
-    "pug": "^2.0.0-rc.4",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "serve-favicon": "~2.3.0",
-    "webpack": "^2.2.1"
+    "pug": "^2.0.0-rc.3",
+    "serve-favicon": "^2.4.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.24.1",
+    "browser-sync": "^2.18.13",
+    "cross-env": "^5.0.3",
+    "css-loader": "^0.28.4",
+    "nodemon": "^1.11.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-refetch": "^1.0.0",
+    "react-spinkit": "^3.0.0",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.4.1"
   }
 }
