--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "express": "^4.15.3",
     "express-session": "^1.15.5",
     "is-typedarray": "^1.0.0",
-    "moment": "^2.18.1",
+    "moment": "^2.19.3",
     "moment-timezone": "^0.5.13",
+    "momentjs": "^2.0.0",
     "mongoose": "^4.11.5",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.8.2",
