--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "task-tracker",
-  "version": "0.0.0",
-  "description": "",
+  "name": "TaskTracker",
+  "version": "0.0.1",
+  "description": "Task Chain Tracking Application",
   "private": true,
-  "author": "Jovani Warguez",
+  "author": "Kyle Becker, Zach Miller, Cole Waltz",
   "main": "bin/www",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jovanidash21/task-tracker.git"
+    "url": "https://github.com/kmbecker/TaskTracker.git"
   },
   "scripts": {
     "start": "node bin/www",
@@ -21,7 +21,7 @@
   "dependencies": {
     "ajv": "^6.2.1",
     "bluebird": "^3.5.0",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
@@ -34,7 +34,7 @@
     "moment": "^2.19.3",
     "moment-timezone": "^0.5.13",
     "momentjs": "^2.0.0",
-    "mongoose": "^4.11.5",
+    "mongoose": "^4.13.11",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.8.2",
     "npm-run-all": "^4.1.1",
