--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Mongoose
-MONGODB_URI='mongodb://heroku_7pczb8jn:v431p7hsp8rqo5alsj017snjmu@ds037467.mlab.com:37467/heroku_7pczb8jn'
+MONGODB_URI=
 
 # Session
-SESSION_SECRET='secretsecret'
+SESSION_SECRET=
