--- a/package.json
+++ b/package.json
@@ -23,40 +23,40 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^1.3.2",
+    "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
-    "eslint": "^4.18.2",
+    "eslint": "^8.44.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "is-typedarray": "^1.0.0",
     "moment": "^2.19.3",
     "moment-timezone": "^0.5.13",
-    "mongoose": "^4.13.11",
+    "mongoose": "^7.3.1",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.9.0",
     "npm-run-all": "^4.1.1",
-    "passport": "^0.3.2",
+    "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0",
-    "pug": "^2.0.0-rc.3",
+    "passport-local-mongoose": "^8.0.0",
+    "pug": "^3.0.2",
     "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
+    "babel-core": "^4.7.16",
     "babel-loader": "^7.1.1",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.23.6",
     "cross-env": "^5.0.3",
-    "css-loader": "^0.28.4",
+    "css-loader": "^6.8.1",
     "nodemon": "^1.11.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-refetch": "^1.0.0",
     "react-spinkit": "^3.0.0",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.4.1"
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.1"
   }
 }
